--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?mnwvdxd#1" target="_blank">首页</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/1?accozcd" target="_blank">动态网</a> | <a href="https://d1vp4chj90rvdj.cloudfront.net/2?ncnhbai" target="_blank">大纪元</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/4?thhqcza" target="_blank">看中国</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/pHh5q?mfgygns" target="_blank">新生网</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/tktpt?czkxtxiy" target="_blank">阿波罗网</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/Mjpvu?kbmzmwvfx" target="_blank">干净世界</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/10?swnitwsa" target="_blank">退党服务</a> | <a href="https://dl1ez95kskssm.cloudfront.net/Rffqf?mpqvmxdi" target="_blank">明慧广播</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/nw9Vn?kowlx" target="_blank">传奇时代</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/AF9AG?ypodaf" target="_blank">新境界影视</a> | <a href="https://doyvntponycdh.cloudfront.net/zqMQA?fxrkbs" target="_blank">文昭谈论</a> | <a href="https://d1kgsi70b35buf.cloudfront.net/7?bpzjsaqh" target="_blank">明慧</a></p><p><a href="https://d37g5boc7rm625.cloudfront.net/9?nnuamttb" target="_blank">大法</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/3?yyfrlxvxx" target="_blank">新唐人</a> | <a href="https://d1uqjs1ubkxo6.cloudfront.net/obAhT?zgqhufx" target="_blank">人民报</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/xXNHu?rmyfh" target="_blank">放光明</a> | <a href="https://d239x61949z6p.cloudfront.net/5?opqwbh" target="_blank">新纪元</a> | <a href="https://d1cayv19uhqaei.cloudfront.net/6?imamwcadn" target="_blank">希望之声</a> | <a href="https://doqmgyop4u892.cloudfront.net/11?tjauwuea" target="_blank">无界网络</a> | <a href="https://d1eqe8yfgc9j6n.cloudfront.net/Pueji?jnhmessuz" target="_blank">追查国际</a> | <a href="https://doh73o6c3dnba.cloudfront.net/16?kqpaipqs" target="_blank">明慧之窗</a> | <a href="https://dqcg8pdekez1x.cloudfront.net/LdvzZ?vgfdag" target="_blank">细语人生</a> | <a href="https://d1z1i6xmekcnf1.cloudfront.net/fBn3r?muhqtnvgq" target="_blank">新世纪影视</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/PUWMb?yimahmila" target="_blank">江峰时刻</a> | <a href="https://d3frzobj0kj0md.cloudfront.net/8?bfaxkfw" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?nrokjhafw#1" target="_blank">首页</a> | <a href="https://d1ed4zj8eeit74.cloudfront.net/1?pkuypotej" target="_blank">动态网</a> | <a href="https://d10efcw5kfoez9.cloudfront.net/2?ekzbfqtz" target="_blank">大纪元</a> | <a href="https://d15m60lsma25jk.cloudfront.net/4?iuqfpstma" target="_blank">看中国</a> | <a href="https://d3ohms0ydcz20j.cloudfront.net/pHh5q?dlhojzmy" target="_blank">新生网</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/tktpt?obxbybz" target="_blank">阿波罗网</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/Mjpvu?qnqwni" target="_blank">干净世界</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/10?xypnitfh" target="_blank">退党服务</a> | <a href="https://d3caox32lipp7h.cloudfront.net/Rffqf?ywtoqwoy" target="_blank">明慧广播</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/nw9Vn?xffvvghpp" target="_blank">传奇时代</a> | <a href="https://d26llhbq1ka51o.cloudfront.net/AF9AG?qifueao" target="_blank">新境界影视</a> | <a href="https://divmj5v44rbg.cloudfront.net/zqMQA?wzwnne" target="_blank">文昭谈论</a> | <a href="https://dwpf34pf0p4a8.cloudfront.net/7?eyopyqmr" target="_blank">明慧</a></p><p><a href="https://d2r9hn1obbkp2q.cloudfront.net/9?dctlut" target="_blank">大法</a> | <a href="https://d2b68ib2p4x8t6.cloudfront.net/3?xjogljsd" target="_blank">新唐人</a> | <a href="https://d3t1om6knkjnq4.cloudfront.net/obAhT?hnkqkfzaf" target="_blank">人民报</a> | <a href="https://dep6yudto3kbo.cloudfront.net/xXNHu?hqxoewdvf" target="_blank">放光明</a> | <a href="https://d3siwajeg0khti.cloudfront.net/5?shditnsas" target="_blank">新纪元</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/6?ssrmwm" target="_blank">希望之声</a> | <a href="https://d2cenl0crtmzsc.cloudfront.net/11?ujxopkinr" target="_blank">无界网络</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/Pueji?omsikuvfu" target="_blank">追查国际</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/16?xyyws" target="_blank">明慧之窗</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/LdvzZ?dettmgy" target="_blank">细语人生</a> | <a href="https://dp5vkf7bbqo9d.cloudfront.net/fBn3r?szjoune" target="_blank">新世纪影视</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/PUWMb?tudnmr" target="_blank">江峰时刻</a> | <a href="https://d1t2us6hq0fx1u.cloudfront.net/8?pqlkfux" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310358.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268624-GettyImages-2149657724_light-320x200.jpg"><p align="center">老干部12年三度促中共退场 专家：政局胶着</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310358.md#1" title="老干部12年三度促中共退场 专家：政局胶着""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268624-GettyImages-2149657724_light-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310289.md#1" title="大陆法拍房数量再攀升 上海现5.6折法拍房""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14145219-28_id13987493-000_9N34E7-320x200.jpg">&nbsp;</a>
@@ -13,14 +13,14 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309918.md#1" title="硅谷富豪纷纷捐款给贺锦丽和川普""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14306049-Harris-Trump-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309164.md#1" title="近几年来不断被失踪的法轮功学员""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290570-2407112241561160-600x400-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310248.md#1">纽约反中共渗透图片展 华人热议王书君案</a><br>
-:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310454.md#1">荷莉贝瑞拍片学会多种武术 陆续断过10根骨头</a><br>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310434.md#1">中国大唐黑龙江发电公司前总经理张春雷落马</a><br>
-:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310480.md#1">8.18流水式集会案｜彭定康批定罪不公正</a><br>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310382.md#1">江西铜业子公司恒邦发生喷溅事故 3死14伤</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309986.md#1">【军事热点】乌对俄边境地区发动大规模空袭</a><br>
+:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310248.md#1">纽约反中共渗透图片展 华人热议王书君案</a><br>
+:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310454.md#1">荷莉贝瑞拍片学会多种武术 陆续断过10根骨头</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310434.md#1">中国大唐黑龙江发电公司前总经理张春雷落马</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310480.md#1">8.18流水式集会案｜彭定康批定罪不公正</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310382.md#1">江西铜业子公司恒邦发生喷溅事故 3死14伤</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309986.md#1">【军事热点】乌对俄边境地区发动大规模空袭</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310358.md#1">老干部12年三度促中共退场 专家：政局胶着</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310395.md#1">乌军攻入俄罗斯满一周 苏德扎镇战斗受瞩目</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310395.md#1">乌军攻入俄罗斯满一周 苏德扎镇战斗受瞩目</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310407.md#1">受贿超4亿 贵州政协前副主席李再勇被判死缓</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310398.md#1">盗卖尸体案发酵 中共被指用这招转移焦点</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
@@ -106,13 +106,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307307.md#1">山西奥瑞非法买尸 青岛大学器官移植中心涉案</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307523.md#1">五家中国公司涉侵犯人权 被美国制裁</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307476.md#1">大外宣没钱 侨报停周末版 美国中文关电视频道</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1wj09m6p90j1u.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1wj09m6p90j1u.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,821</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1lq2c74afq15l.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1lq2c74afq15l.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,821</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 434,405,977 人
+!共 434,407,978 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310398.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308397-7f011d64a19c6badbaf051f8633990c3-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310398.md#1">盗卖尸体案发酵 中共被指用这招转移焦点</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309888.md#1">中共智库高官接受外媒专访 外宣式回应遭嘲笑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308857.md#1">中共户籍制再曝丑闻 一老人名下多出8子女</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308794.md#1">首位器官摘除幸存者：站出来揭露中共邪恶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308612.md#1">揭买尸案律师指“更高层介入” 其安全受关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308455.md#1">【新闻欣视角】奥瑞只是冰山一角 央企涉案 黑幕惊人</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310100.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14310144-1-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310100.md#1">“不认房不认贷” 成都再次放松楼市调控</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14310040.md#1">上海市市民二手店买到“救灾物资” 引热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309727.md#1">万达酒店发展预期上半年净亏约9亿港元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309666.md#1">富力地产附属公司无力支付1.47亿美元票据利息</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309695.md#1">A股成交额跌破5000亿 创2022年5月以来新低</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309373.md#1">资金不足 大陆部分经销商拖延提供汽车合格证</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310434.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310434.md#1">中国大唐黑龙江发电公司前总经理张春雷落马</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310407.md#1">受贿超4亿 贵州政协前副主席李再勇被判死缓</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309820.md#1">【晚间新闻】中国专家承认疫情上升</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309819.md#1">【全球新闻】乌军攻占俄领土一千平方公里</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309816.md#1">【环球直击】杭州外卖员遭下跪罚款 千人抗议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309814.md#1">【中国禁闻】中共国安黑手伸向留学申请</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310382.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310382.md#1">江西铜业子公司恒邦发生喷溅事故 3死14伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310269.md#1">深圳宝安罕现“水龙卷” 十年来第三次</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310347.md#1">中山一工厂内发生小汽车撞人事件 致8人受伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310215.md#1">江西景区玩漂流突遇山洪 游客夫妻1死1伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309692.md#1">“南水北调”河南长垣段发生安全事故 致5死</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309642.md#1">中国新冠疫情升温 广东7月确诊增加逾万例</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310222.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310222.md#1">三退声明精选（2024/08/12）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309700.md#1">山东一地发生持弓箭伤人事件 细节曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309367.md#1">三退声明精选（2024/08/11）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308831.md#1">中国人花数千美元 从巴拿马VIP路径走线美国</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308926.md#1">7月中国各种灾害至少造成328人失踪死亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308880.md#1">广西景区魔毯断裂致1死60伤 游客曝惊险过程</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306410.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/05/id13999070-GettyImages-1237394084-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306410.md#1">中共与西方“脱钩” 留欧学生遭夹击</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302373.md#1">新剧中挑战农妇角色 杨幂的造型引争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300362.md#1">巴黎奥运 中国女篮首战失利败给西班牙</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/28/n14299945.md#1">“北京中轴线”申遗成功 含毛纪念堂引争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299901.md#1">为玩“烟卡游戏” 四川六童偷六万元高档香烟</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297646.md#1">陕师大教师给女生发不雅照？9年前被举报无果</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284768.md#1">前高官：中共恐怖治国假话盛行 官员难善终</a><br>
